--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,13 +1,3 @@
 @import 'variables';
-
-h1 {
-    color: $red-color;
-}
-
-h2 {
-    color: green;
-}
-
-.card-course-item {
-    margin-top: 16px !important;
-}
+@import 'header.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
