--- a/src/resources/scss/header.scss
+++ b/src/resources/scss/header.scss
@@ -4,6 +4,8 @@
     font-family: Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
     padding: 0.5rem 1.5rem;
+    position: fixed !important;
+    width: 100%;
 }
 
 .navbar-brand {
