--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,7 @@
-<h1>HOME PAGE</h1>
+{{! Banner }}
+<div class='banner'>
+    <img
+        src='https://cmsv2.yame.vn/uploads/ade6b51c-2b6c-476d-8030-f9064082522c/Banner-web-0107-01-ch%e1%bb%af.jpg?quality=80&w=0&h=0'
+        alt='Banner-web'
+    />
+</div>
