--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,3 +1,15 @@
 @import 'variables';
 @import 'header.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+.container {
+    max-width: 1450px;
+}
+
+.banner {
+    width: 100%;
+}
+
+.banner img {
+    width: 100%;
+}
