--- a/src/resources/scss/_variables.scss
+++ b/src/resources/scss/_variables.scss
@@ -5,6 +5,7 @@
     --blue-black: #161d27;
     --white: #f3f3f4;
     --yellow: #ffc174;
+    --green: #28a745;
 
     // Default layout
     --default-layout-header-height: 160px;
