--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -5,3 +5,40 @@
         alt='Banner-web'
     />
 </div>
+
+<div class='mt-4'>
+    <div class='row'>
+
+        {{#each products}}
+            <div class='col-sm-6 col-lg-4' style='padding: 0 40px'>
+                <div class='card card-products-item'>
+                    <a href=''>
+                        <img src={{this._doc.image}} class='card-img-top' alt='{{this._doc.name}}' />
+                    </a>
+                    <div class='card-body'>
+                        <a href=''>
+                            <h5 class='card-title'>{{this._doc.name}}</h5>
+                        </a>
+                        <p class='card-text'>{{this._doc.price}}</p>
+                        <a href='#' class='btn btn-primary btn-css'>
+                            ĐẶT HÀNG
+                            <svg
+                                xmlns='http://www.w3.org/2000/svg'
+                                width='14'
+                                height='14'
+                                fill='currentColor'
+                                class='bi bi-cart-plus-fill'
+                                viewBox='0 0 16 16'
+                            >
+                                <path
+                                    d='M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z'
+                                ></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+
+    </div>
+</div>
