Create new product

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 .container {
+    padding-top: 70px;
     max-width: 1450px;
 }
 
