--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -47,6 +47,9 @@
             <li class='nav-item'>
                 <a class='nav-link' href='#'>Contact</a>
             </li>
+            <li class='nav-item'>
+                <a class='nav-link' href='/shop/create'>Create Product</a>
+            </li>
             {{! <li class='nav-item'>
                 <a class='nav-link disabled' href='#'>Disabled</a>
             </li> }}
