--- a/src/resources/scss/_variables.scss
+++ b/src/resources/scss/_variables.scss
@@ -6,6 +6,7 @@
     --white: #f3f3f4;
     --yellow: #ffc174;
     --green: #28a745;
+    --gray: #efefef;
 
     // Default layout
     --default-layout-header-height: 160px;
