--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark navbar-wrapper'>
     <a class='navbar-brand' href='/'>
-        <span>L</span>O<span>G</span>O
+        <span>Ad</span>min
+        {{! <span>G</span>O }}
     </a>
     <button
         class='navbar-toggler'
@@ -17,7 +18,7 @@
     <div class='collapse navbar-collapse' id='navbarSupportedContent'>
         <ul class='navbar-nav mr-auto'>
             <li class='nav-item active'>
-                <a class='nav-link' href='#'>Home <span class='sr-only'>(current)</span></a>
+                <a class='nav-link' href='/'>Home <span class='sr-only'>(current)</span></a>
             </li>
             <li class='nav-item dropdown'>
                 <a
