--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,7 +1,7 @@
 {{! Banner }}
 <div class='banner'>
     <img
-        src='https://cmsv2.yame.vn/uploads/ade6b51c-2b6c-476d-8030-f9064082522c/Banner-web-0107-01-ch%e1%bb%af.jpg?quality=80&w=0&h=0'
+        src='https://scontent.fsgn5-10.fna.fbcdn.net/v/t39.30808-6/293872549_1730185250665465_6899079693149259698_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=LcQaxG9dCHYAX_pC_bS&_nc_ht=scontent.fsgn5-10.fna&oh=00_AT8KZCeD19JbzfhBnYbIfOPOumpe8uwVlT8zzMVfA3EUaw&oe=62D755B8'
         alt='Banner-web'
     />
 </div>
