--- a/src/resources/views/shop/create.hbs
+++ b/src/resources/views/shop/create.hbs
@@ -1,7 +1,7 @@
-<div class='mt-4'>
+<div class='mt-4 create-wrapper'>
     <h3>Đăng sản phẩm</h3>
 
-    <form method='POST' action='/shop/store'>
+    <form class='mt-4' method='POST' action='/shop/store'>
         <div class='form-group'>
             <label for='name'>Tên sản phẩm</label>
             <input type='text' class='form-control' id='name' name='name' />
