--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 .container {
-    max-width: 1600px;
-    width: 100%;
+    // max-width: 1600px;
+    max-width: 1400px;
     padding: 70px 0 0;
 }
 
@@ -65,4 +65,8 @@
     span {
         color: var(--blue-black);
     }
+}
+
+.create-wrapper {
+    padding: 0 50px !important;
 }
