--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,6 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark navbar-wrapper'>
     <a class='navbar-brand' href='/'>
-        <span>Ad</span>min
-        {{! <span>G</span>O }}
+        <span>L</span>O<span>G</span>O
     </a>
     <button
         class='navbar-toggler'
@@ -48,8 +47,30 @@
             <li class='nav-item'>
                 <a class='nav-link' href='#'>Contact</a>
             </li>
-            <li class='nav-item'>
-                <a class='nav-link' href='/shop/create'>Create Product</a>
+            <li class='nav-item dropdown'>
+                <a
+                    class='nav-link dropdown-toggle'
+                    href='#'
+                    id='navbarDropdown'
+                    role='button'
+                    data-toggle='dropdown'
+                    aria-haspopup='true'
+                    aria-expanded='false'
+                >
+                    Admin
+                </a>
+                <div class='dropdown-menu sub-menu' aria-labelledby='navbarDropdown'>
+                    <div class='inner-menu'>
+                        <a class='dropdown-item' href='/shop/create'>Create Product</a>
+                    </div>
+                    <div class='dropdown-divider'></div>
+                    <div class='inner-menu'>
+                        <a class='dropdown-item' href='/me/stored/products'>Home Product</a>
+                        <a class='dropdown-item' href='/me/stored/blog'>Blog Product</a>
+                    </div>
+                    <div class='dropdown-divider'></div>
+                    <a class='dropdown-item' href='#'>Sign out</a>
+                </div>
             </li>
             {{! <li class='nav-item'>
                 <a class='nav-link disabled' href='#'>Disabled</a>
