--- a/src/resources/views/me/stored-products.hbs
+++ b/src/resources/views/me/stored-products.hbs
@@ -18,10 +18,50 @@
                     <td>{{this._doc.createdAt}}</td>
                     <td>
                         <a href='/shop/{{this._doc._id}}/edit' class='btn btn-link'>Sửa</a>
-                        <a href='' class='btn btn-link'>Xóa</a>
+                        <a
+                            href=''
+                            class='btn btn-link'
+                            data-toggle='modal'
+                            data-id='{{this._doc._id}}'
+                            data-target='#delete-product-modal'
+                        >Xóa</a>
                     </td>
                 </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
+{{! Confirm delete }}
+<form name='delete-product-form' method='POST'></form>
+
+<div id='delete-product-modal' class='modal' tabindex='-1' role='dialog'>
+    <div class='modal-dialog' role='document'>
+        <div class='modal-content'>
+            <div class='modal-header'>
+                <h5 class='modal-title'>Delete product?</h5>
+                <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                    <span aria-hidden='true'>&times;</span>
+                </button>
+            </div>
+            <div class='modal-body'>
+                <p>Do you want to delete this product?</p>
+            </div>
+            <div class='modal-footer'>
+                <button id='btn-delete-product' type='button' class='btn btn-danger'>Delete</button>
+                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+{{! Delete hidden form }}
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() { var productId; var deleteForm =
+    document.forms['delete-product-form']; var btnDeleteProduct = document.getElementById('btn-delete-product');
+    $('#delete-product-modal').on('show.bs.modal', function(event) { var button = $(event.relatedTarget); productId =
+    button.data('id'); }); btnDeleteProduct.onclick = () => { deleteForm.action = '/shop/' + productId +
+    '?_method=DELETE'; deleteForm.submit(); } })
+
+</script>
