--- a/src/resources/views/me/trash-products.hbs
+++ b/src/resources/views/me/trash-products.hbs
@@ -1,7 +1,7 @@
 <div class='mt-4'>
     <div>
-        <h3>Home Product</h3>
-        <a href='/me/trash/products'>Recycle Bin</a>
+        <a href='/me/stored/products'>List Products</a>
+        <h3>Removed products</h3>
     </div>
     <table class='table'>
         <thead>
@@ -20,21 +20,21 @@
                     <td>{{this._doc.price}}</td>
                     <td>{{this._doc.createdAt}}</td>
                     <td>
-                        <a href='/shop/{{this._doc._id}}/edit' class='btn btn-link'>Sửa</a>
+                        <a href='' class='btn btn-link btn-restore' data-id='{{this._doc._id}}'>Restore</a>
                         <a
                             href=''
                             class='btn btn-link'
                             data-toggle='modal'
                             data-id='{{this._doc._id}}'
                             data-target='#delete-product-modal'
-                        >Xóa</a>
+                        >Delete</a>
                     </td>
                 </tr>
             {{else}}
                 <tr>
                     <td colspan='5' class='text-center'>
-                        Bạn chưa có sản phẩm nào.
-                        <a href='/shop/create'>Đăng sản phẩm</a>
+                        Recycle Bin is empty.
+                        <a href='/me/stored/products'>List Products</a>
                     </td>
                 </tr>
             {{/each}}
@@ -48,30 +48,33 @@
     <div class='modal-dialog' role='document'>
         <div class='modal-content'>
             <div class='modal-header'>
-                <h5 class='modal-title'>Delete product?</h5>
+                <h5 class='modal-title'>Permanently delete product?</h5>
                 <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
             <div class='modal-body'>
-                <p>Do you want to delete this product?</p>
+                <p>Do you want to permanently delete this product?</p>
             </div>
             <div class='modal-footer'>
-                <button id='btn-delete-product' type='button' class='btn btn-danger'>Delete</button>
+                <button id='btn-delete-product' type='button' class='btn btn-danger'>Permanently Delete</button>
                 <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
             </div>
         </div>
     </div>
 </div>
 
-{{! Delete hidden form }}
 <form name='delete-product-form' method='POST'></form>
+<form name='restore-product-form' method='POST'></form>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() { var productId; var deleteForm =
-    document.forms['delete-product-form']; var btnDeleteProduct = document.getElementById('btn-delete-product');
+    document.forms['delete-product-form']; var restoreForm = document.forms['restore-product-form']; var
+    btnDeleteProduct = document.getElementById('btn-delete-product'); var restoreBtn = $('.btn-restore');
     $('#delete-product-modal').on('show.bs.modal', function(event) { var button = $(event.relatedTarget); productId =
     button.data('id'); }); btnDeleteProduct.onclick = () => { deleteForm.action = '/shop/' + productId +
-    '?_method=DELETE'; deleteForm.submit(); } })
+    '/force?_method=DELETE'; deleteForm.submit(); }; restoreBtn.click(function(e) { e.preventDefault(); var productId =
+    $(this).data('id'); restoreForm.action = '/shop/' + productId + '/restore?_method=PATCH'; restoreForm.submit(); })
+    })
 
 </script>
