--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -33,12 +33,16 @@
                 </a>
                 <div class='dropdown-menu sub-menu' aria-labelledby='navbarDropdown'>
                     <div class='inner-menu'>
-                        <a class='dropdown-item' href='#'>Action</a>
-                        <a class='dropdown-item' href='#'>Another action</a>
+                        <a class='dropdown-item' href='#'>Top</a>
+                        <a class='dropdown-item' href='#'>Jean</a>
                     </div>
-
                     <div class='dropdown-divider'></div>
-                    <a class='dropdown-item' href='#'>Something else here</a>
+                    <div class='inner-menu'>
+                        <a class='dropdown-item' href='#'>Jacket</a>
+                        <a class='dropdown-item' href='#'>Hoodie</a>
+                    </div>
+                    <div class='dropdown-divider'></div>
+                    <a class='dropdown-item' href='#'>All Products</a>
                 </div>
             </li>
             <li class='nav-item'>
@@ -61,12 +65,13 @@
                 </a>
                 <div class='dropdown-menu sub-menu' aria-labelledby='navbarDropdown'>
                     <div class='inner-menu'>
+                        <a class='dropdown-item' href='/me/stored/products'>Home Product</a>
                         <a class='dropdown-item' href='/shop/create'>Create Product</a>
                     </div>
                     <div class='dropdown-divider'></div>
                     <div class='inner-menu'>
-                        <a class='dropdown-item' href='/me/stored/products'>Home Product</a>
-                        <a class='dropdown-item' href='/me/stored/blog'>Blog Product</a>
+                        <a class='dropdown-item' href='/me/stored/blog'>Blog Content</a>
+                        <a class='dropdown-item' href='/'>Create Blog</a>
                     </div>
                     <div class='dropdown-divider'></div>
                     <a class='dropdown-item' href='#'>Sign out</a>
