--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -7,6 +7,7 @@
 </div>
 
 <div class='mt-4'>
+    <h2 class='text-center hot_sales'>HOT SALES</h2>
     <div class='row'>
 
         {{#each products}}
